--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Galaxy Preview — Robust</title>
+<title>Galaxy Preview — Stable IDs & robust</title>
 <style>
   html,body{height:100%;margin:0;background:#000;overflow:hidden;cursor:grab}
   canvas{display:block;width:100vw;height:100vh}
@@ -44,12 +44,20 @@
 <script>
 (() => {
   // ---------- CONFIG ----------
-  const BIN_ID = "68bf178d43b1c97be93b6017"; // your bin id
-  const API_KEY = "$2a$10$v5iz8EGzsG8zuskDmdWP3eVbYVF13tG.SWgu7BcmZ3rnawZ5WbnQC"; // demo only
+  const BIN_ID = "68bf1d83ae596e708fe72284"; // your bin id (for remote testing)
+  const API_KEY = "$2a$10$ZZmri.xNpvu4cY6Iwt1z0ORO.UqK6oYspAWWzBVC0.zEBxRF3FAay"; // demo only — don't expose in prod
   const JSONBIN_URL = `https://api.jsonbin.io/v3/b/${BIN_ID}`;
   const LOCAL_KEY = 'galaxy.persistedStars.v1';
   const REMOTE_TIMEOUT_MS = 6000; // 6s
-  const params = { spinSpeed: 0.00018, starCount: 1200, arms: 3, cameraDistanceFactor: 1.6, armTightness:6.2, coreHeightFactor:0.1, bgStarCount:1200 };
+  const params = {
+    spinSpeed: 0.00018,
+    starCount: 1400,
+    arms: 3,
+    cameraDistanceFactor: 1.6,
+    armTightness: 6.2,
+    coreHeightFactor: 0.1,
+    bgStarCount: 900
+  };
   // ----------------------------
 
   const canvas = document.getElementById('c');
@@ -57,7 +65,7 @@
   let DPR = Math.max(1, window.devicePixelRatio || 1);
   let CAMERA_DISTANCE = 1000;
   let stars = [];
-  let persistedStars = []; // array of {id, name}
+  let persistedStars = []; // array of {id:string, name:string}
   let saveTimeout = null;
 
   function toast(msg){
@@ -91,7 +99,7 @@
       if(raw){
         const parsed = JSON.parse(raw);
         if(Array.isArray(parsed)) {
-          persistedStars = parsed;
+          persistedStars = parsed.map(p => ({ id: String(p.id), name: p.name }));
           console.info('Loaded persistedStars from localStorage', persistedStars);
           toast('Loaded saved stars (local)');
         }
@@ -110,25 +118,22 @@
       if(Array.isArray(json)) incoming = json;
       else if(json && Array.isArray(json.record)) incoming = json.record;
       else {
-        // try to find any array property
         for(const k of Object.keys(json||{})){
           if(Array.isArray(json[k])) { incoming = json[k]; break; }
         }
       }
       if(!incoming) throw new Error('Invalid JSON shape from remote (no array found)');
-      // Normalize ids to string to compare reliably
       incoming = incoming.map(it => ({ id: String(it.id), name: it.name }));
-      // Merge: remote entries override local ones
+      // Merge: remote overrides local
       const map = new Map();
       (persistedStars || []).forEach(p => map.set(String(p.id), p));
       incoming.forEach(p => map.set(String(p.id), p));
       persistedStars = Array.from(map.values());
-      localStorage.setItem(LOCAL_KEY, JSON.stringify(persistedStars));
+      try{ localStorage.setItem(LOCAL_KEY, JSON.stringify(persistedStars)); }catch(e){}
       console.info('Loaded and merged remote persistedStars', persistedStars);
       toast('Loaded saved stars (remote)');
     } catch(err){
       console.warn('Remote load failed:', err);
-      // differentiate reasons for user clarity
       if(err.name === 'AbortError') toast('Remote load timed out — using local copies');
       else if(err instanceof TypeError && err.message.includes('Failed to fetch')) toast('Remote load failed (network/CORS) — using local copies');
       else toast('Could not load remote stars — using local copies');
@@ -137,7 +142,6 @@
 
   // ------------- save (local immediate + debounced remote) -------------
   function scheduleSaveStarsToDB(){
-    // immediate local persist
     try{ localStorage.setItem(LOCAL_KEY, JSON.stringify(persistedStars)); } catch(e){ console.warn('local save failed', e); }
     if(saveTimeout) clearTimeout(saveTimeout);
     saveTimeout = setTimeout(() => saveStarsToDB().catch(() => {}), 400);
@@ -180,6 +184,8 @@
     stars = [];
     const W = innerWidth, H = innerHeight;
     const R = Math.hypot(W/2, H/2);
+
+    // Spiral stars — deterministic IDs (based on index) so persisted names map correctly
     for(let i=0;i<params.starCount;i++){
       const arm = i % params.arms;
       const armAngle = (arm / params.arms) * Math.PI*2;
@@ -187,50 +193,78 @@
       const armOffset = -(t / R) * params.armTightness * Math.PI;
       const theta = armAngle + armOffset + (Math.random()-0.5)*0.15;
       const spread = Math.random() * 14 * (1 - t/R);
+
       const baseX = Math.cos(theta) * t + (Math.random()-0.5) * spread;
       const baseY = Math.sin(theta) * t + (Math.random()-0.5) * spread * 0.6;
       const baseZ = (Math.random() - 0.5) * Math.max(60, window.innerWidth*0.08) * params.coreHeightFactor;
-      let size, color;
+
+      // ensure positive sizes
+      let size;
       if (Math.random() < 0.65) {
         size = Math.max(0.6, (1 - t / R) * 2.8);
+      } else {
+        size = Math.max(0.3, (1 - t / R) * 1.5);
+      }
+
+      // deterministic ID
+      const id = `spiral-${i}`;
+
+      let color;
+      if (Math.random() < 0.65) {
         const r = 120 + Math.floor(Math.random() * 60);
         const g = 120 + Math.floor(Math.random() * 60);
         const b = 180 + Math.floor(Math.random() * 40);
         const alpha = 0.6 + Math.random() * 0.4;
         color = `rgba(${r},${g},${b},${alpha.toFixed(3)})`;
       } else {
-        size = Math.max(0.3, (1 - t / R) * 1.5);
         const r = 200 + Math.floor(Math.random() * 55);
         const g = 200 + Math.floor(Math.random() * 55);
         const b = 230 + Math.floor(Math.random() * 25);
         const alpha = 0.35 + Math.random() * 0.45;
         color = `rgba(${r},${g},${b},${alpha.toFixed(3)})`;
       }
-      const id = `spiral-${arm}-${t.toFixed(2)}-${theta.toFixed(2)}`;
+
       stars.push({
         id: String(id),
-        angle: theta, radius: t, x: baseX, y: baseY, z: baseZ,
-        size, color, arm, twinkle:false, name:null, burst:false, burstStart:0
+        angle: theta,
+        radius: t,
+        x: baseX,
+        y: baseY,
+        z: baseZ,
+        size: Math.abs(size),
+        color,
+        arm,
+        twinkle:false,
+        name:null,
+        burst:false,
+        burstStart:0
       });
     }
 
+    // Background stars — deterministic ids based on index
     for(let i=0;i<params.bgStarCount;i++){
       const radius = Math.random() * R * 1.3;
       const angle = Math.random() * Math.PI * 2;
       const z = (Math.random() - 0.5) * Math.max(120, innerWidth*0.15);
-      const size = 0.4 + Math.random() * 0.8;
+      const size = Math.max(0.25, 0.4 + Math.random() * 0.8);
       const palette = [[220,220,255],[255,255,255],[255,245,200],[200,220,255]];
       const c = palette[Math.floor(Math.random()*palette.length)];
       const baseAlpha = 0.45 + Math.random() * 0.45;
       const twinklePhase = Math.random() * Math.PI*2;
       const twinkleSpeed = 0.001 + Math.random() * 0.002;
-      const id = `bg-${radius.toFixed(2)}-${angle.toFixed(2)}-${z.toFixed(2)}`;
+      const id = `bg-${i}`;
       stars.push({
-        id: String(id), angle, radius, x:0, y:0, z, size,
-        color:[c[0],c[1],c[2]], baseAlpha, twinkle:true, twinklePhase, twinkleSpeed, name:null, burst:false, burstStart:0
+        id: String(id),
+        angle, radius, x:0, y:0, z,
+        size: Math.abs(size),
+        color:[c[0],c[1],c[2]],
+        baseAlpha, twinkle:true,
+        twinklePhase, twinkleSpeed,
+        name:null, burst:false, burstStart:0
       });
     }
-    // apply persisted names (merge)
+
+    // Ensure names from persistedStars apply
     applyPersistedNames();
   }
 
@@ -279,7 +313,7 @@
       chosen.name = name;
       chosen.burst = true;
       chosen.burstStart = performance.now();
-      // update persistedStars record
+      // update persistedStars record (id as string)
       const idx = persistedStars.findIndex(ps => String(ps.id) === String(chosen.id));
       if(idx !== -1) persistedStars[idx].name = name;
       else persistedStars.push({ id: String(chosen.id), name });
@@ -296,13 +330,13 @@
     try{
       const dt = now - last; last = now;
       const W = innerWidth, H = innerHeight;
-      ctx.fillStyle = '#000'; ctx.fillRect(0,0,W,H);
+      ctx.clearRect(0,0,W,H);
       ctx.save(); ctx.translate(W/2, H/2);
       const cosX = Math.cos(camRotX), sinX = Math.sin(camRotX), cosY = Math.cos(camRotY), sinY = Math.sin(camRotY);
 
       for(const s of stars){
         try{
-          s.angle += params.spinSpeed * dt * (0.5 + s.radius * 0.0005);
+          s.angle += params.spinSpeed * dt * (0.5 + (s.radius || 0) * 0.0005);
           const x = Math.cos(s.angle) * s.radius;
           const y = Math.sin(s.angle) * s.radius;
           let z = s.z || 0;
@@ -313,7 +347,10 @@
           const denom = Math.max(120, CAMERA_DISTANCE + rz);
           const proj = CAMERA_DISTANCE / denom;
           const sx = rx * proj, sy = ry * proj;
-          let screenR = Math.max(0.18, (s.size || 0.5) * proj);
+          // ensure positive and non-zero values for arc radius
+          const safeSize = Math.abs(s.size || 0.5);
+          const screenR = Math.max(0.15, safeSize * Math.max(0.001, proj));
+
           let fillStyle;
           if(s.twinkle && Array.isArray(s.color)){
             const twinkle = 0.4 + 0.6 * Math.abs(Math.sin((s.twinklePhase||0) + now * (s.twinkleSpeed||0.001)));
@@ -323,15 +360,20 @@
 
           if(s.burst){
             const elapsed = now - s.burstStart;
-            if(elapsed < 1500){ screenR *= 1 + 1.5 * Math.sin(elapsed/100 * Math.PI/6); fillStyle = "rgba(255,215,0,0.95)"; }
-            else s.burst = false;
+            if(elapsed < 1500){ 
+              const pulse = 1 + 1.5 * Math.sin(elapsed/100 * Math.PI/6);
+              ctx.beginPath(); ctx.fillStyle = "rgba(255,215,0,0.95)"; ctx.arc(sx, sy, Math.max(0.15, screenR * pulse), 0, Math.PI*2); ctx.fill();
+            } else {
+              s.burst = false;
+              ctx.beginPath(); ctx.fillStyle = fillStyle; ctx.arc(sx, sy, screenR, 0, Math.PI*2); ctx.fill();
+            }
+          } else {
+            ctx.beginPath(); ctx.fillStyle = fillStyle; ctx.arc(sx, sy, screenR, 0, Math.PI*2); ctx.fill();
           }
-
-          ctx.beginPath(); ctx.fillStyle = fillStyle; ctx.arc(sx, sy, screenR, 0, Math.PI*2); ctx.fill();
 
           if(s.name){
             ctx.fillStyle = "#fff"; ctx.font = "bold 12px sans-serif"; ctx.textAlign = "center";
-            ctx.fillText(s.name, sx, sy - 6);
+            ctx.fillText(s.name, sx, sy - Math.max(8, screenR*2));
           }
         }catch(err){ console.warn('star draw error', err); }
       }
@@ -353,8 +395,9 @@
 
   // ---------- init ----------
   (async function init(){
-    await loadStarsFromDB();
-    regenerate(); // generate geometry and merge persisted names
+    await loadStarsFromDB();   // loads persistedStars (local + remote merge)
+    regenerate();              // generate stars (deterministic IDs)
+    applyPersistedNames();     // ensure names are applied (should already be done in regenerate but safe)
     requestAnimationFrame(draw);
   })();
 
